# HALO

./: .gitignore  EXPORT_AUDIT.md  EXPORT_MANIFEST.json  README.md  README.zh.md  pyproject.toml
examples/: run_examples.sh  show_tree_pairwise_barycenter.py  test_grid_mode.py  test_tree_mode.py
examples/assets/: chair_0001_points_65536.npz  toilet_0001_points_65536.npz
src/halo_public/: __init__.py
src/halo_public/common/: base.py  config.py  profiling.py  profiling_names.py  solver.py  solver_backend.py  utils.py
src/halo_public/halo/: __init__.py  api.py  hierarchy.py  infeas.py  shielding.py  shielding_numba.py  solver_tree.py  violation_check.py
src/halo_public/lp_solvers/: __init__.py  cupdlpx.py  scipy.py  wrapper.py
src/halo_public/mgpd/: __init__.py  api.py  costs.py  hierarchy.py  infeas_grid.py  operators.py  shield.py  solver_grid.py  violation_check.py
src/hierarchical_ot/: __init__.py  api.py
src/hierarchical_ot/api/: __init__.py  emd.py
src/hierarchical_ot/core/: __init__.py  hierarchical_solver.py  mode_dispatch.py  multilevel_flow.py  result_utils.py  solver_utils.py
src/hierarchical_ot/instrumentation/: __init__.py  chrome_trace.py  console_reporter.py  costs.py  dump.py  no_op.py  phase_names.py  preflight.py  printing.py  profiling.py  reporting.py  runtime_profiler.py  trace.py
src/hierarchical_ot/lp_solvers/: cupdlpx.py  cupdlpx_tree.py  hprlp.py  scipy.py  wrapper.py
src/hierarchical_ot/lp_solvers/HPR-LP-C/: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  build.sh
src/hierarchical_ot/lp_solvers/HPR-LP-C/.github/: PULL_REQUEST_TEMPLATE.md
src/hierarchical_ot/lp_solvers/HPR-LP-C/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
src/hierarchical_ot/lp_solvers/HPR-LP-C/.github/workflows/: build.yml
src/hierarchical_ot/lp_solvers/HPR-LP-C/bindings/julia/: .gitignore  README.md  install.sh
src/hierarchical_ot/lp_solvers/HPR-LP-C/bindings/julia/examples/: example_direct_lp.jl  example_jump.jl  example_mps_file.jl
src/hierarchical_ot/lp_solvers/HPR-LP-C/bindings/julia/package/: Project.toml  debug_lib.jl
src/hierarchical_ot/lp_solvers/HPR-LP-C/bindings/julia/package/src/: HPRLP.jl  interface.jl  utils.jl  wrapper.jl
src/hierarchical_ot/lp_solvers/HPR-LP-C/bindings/matlab/: README.md  install.sh
src/hierarchical_ot/lp_solvers/HPR-LP-C/bindings/matlab/+hprlp/: Model.m  Parameters.m  Result.m  setup_library_path.m  solve.m  solve_mps.m
src/hierarchical_ot/lp_solvers/HPR-LP-C/bindings/matlab/examples/: example_direct_lp.m  example_mps_file.m
src/hierarchical_ot/lp_solvers/HPR-LP-C/bindings/matlab/src/: hprlp_mex.cpp
src/hierarchical_ot/lp_solvers/HPR-LP-C/bindings/python/: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
src/hierarchical_ot/lp_solvers/HPR-LP-C/bindings/python/examples/: example_direct_lp.py  example_from_mps_file.py  example_mps_file.py
src/hierarchical_ot/lp_solvers/HPR-LP-C/bindings/python/hprlp/: __init__.py  model.py  modeling.py  parameters.py  results.py  solver.py
src/hierarchical_ot/lp_solvers/HPR-LP-C/bindings/python/src/: hprlp_pybind.cpp
src/hierarchical_ot/lp_solvers/HPR-LP-C/build_cpp/: Makefile  solve_mps_file
src/hierarchical_ot/lp_solvers/HPR-LP-C/cmake/: HPRLPConfig.cmake.in
src/hierarchical_ot/lp_solvers/HPR-LP-C/examples/c/: README.md  example_direct_lp.c  example_mps_file.c
src/hierarchical_ot/lp_solvers/HPR-LP-C/examples/cpp/: README.md  example_direct_lp.cpp  example_mps_file.cpp
src/hierarchical_ot/lp_solvers/HPR-LP-C/include/: HPRLP.h  constants.h  main_iterate.h  mps_reader.h  power_iteration.h  preprocess.h  scaling.h  structs.h  utils.h  version.h
src/hierarchical_ot/lp_solvers/HPR-LP-C/include/cuda_kernels/: HPR_cuda_kernels.cuh  cuda_check.h
src/hierarchical_ot/lp_solvers/HPR-LP-C/src/: HPRLP.cu  main_iterate.cu  mps_reader.cpp  power_iteration.cu  preprocess.cu  scaling.cu  solve_mps_file.cpp  utils.cu
src/hierarchical_ot/lp_solvers/HPR-LP-C/src/cuda_kernels/: HPR_cuda_kernels.cu
src/hierarchical_ot/lp_solvers/build_solvers/: .gitignore  build_cupdlpx_micromamba.sh  build_hprlp_micromamba.sh
src/hierarchical_ot/lp_solvers/cuPDLPx/: .gitignore
src/hierarchical_ot/lp_solvers/cuPDLPx/cupdlpx/: cupdlpx.c  cupdlpx.h  solver.cu  struct.h  utils.cu
src/hierarchical_ot/lp_solvers/cuPDLPx/pycupdlpx/: .isort.cfg  CMakeLists.txt  build.sh  build_halo_iclr_4090_env.sh  cupdlpx_bindings.cpp  pyproject.toml  test.py
src/hierarchical_ot/modes/: __init__.py
src/hierarchical_ot/modes/grid/: __init__.py  costs.py  hierarchy.py  infeasibility.py  initial.py  iterations.py  operators.py  result.py  shielding.py  solve_lp.py  stop.py  violation_check.py  violation_kernels.py
src/hierarchical_ot/modes/tree/: __init__.py  hierarchy.py  infeasibility_check.py  initial.py  iterations.py  legacy_infeasibility.py  logger.py  result.py  shielding.py  shielding_backup.py  solve_lp.py  stop.py  trace_utils.py  violation_check.py
src/hierarchical_ot/solvers/: single_level.py
src/hierarchical_ot/types/: __init__.py  base.py  config.py  runtime.py
tests/: test_public_smoke.py
