[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "halo-public"
version = "0.1.0"
description = "Public MGPD and HALO implementations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "numba>=0.59,<0.60",
]

[project.optional-dependencies]
gpu = ["cupy-cuda12x"]
faiss = ["faiss-gpu-cu12"]
torch = ["torch>=2.6.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["halo_public*"]
