[build-system]
requires = [
    "setuptools>=64",
    "wheel",
    "pybind11>=2.10.0",
    "numpy>=1.20.0",
    "cmake>=3.18",
]
build-backend = "setuptools.build_meta"

[project]
name = "hprlp"
version = "0.1.0"
description = "Python bindings for the GPU-accelerated Halpern Peaceman--Rachford linear programming solver"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "HPR-LP Contributors"},
]
maintainers = [
    {name = "HPR-LP Contributors"},
]
keywords = ["optimization", "linear-programming", "gpu", "cuda", "solver"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "flake8",
]

[project.urls]
Homepage = "https://github.com/PolyU-IOR/HPR-LP-C"
Repository = "https://github.com/PolyU-IOR/HPR-LP-C"
Documentation = "https://github.com/PolyU-IOR/HPR-LP-C/blob/main/README.md"
"Bug Tracker" = "https://github.com/PolyU-IOR/HPR-LP-C/issues"
